Fixed footer overlap and additional formatting

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@
   font-size: larger;
   color: antiquewhite;
   width: 100%;
-  height: 30px;
+  height: auto;
   position: relative;
   text-align: center;
   padding: auto;
@@ -56,13 +56,41 @@
   margin-right: auto;
   }
 
-  h1 {
+  .hometext h1 {
+    color: blueviolet;
     text-align: center;
-    font-family: sans-serif;
-    font: size 30px;
-    color: rgb(167, 115, 167);    
+    font-family: sans-serif; 
+    }
+
+    .hometext h2 {
+      color: blueviolet;
+      text-align: center;
+      font-family: sans-serif; 
+      }
+
+      .hometext p {
+        font-family: sans-serif;
+        text-align: center;
+        margin: auto;
+        padding: auto;
+        width: 50%;
+        
+      }
+
+  .contact h1 {
+  color: blueviolet;
+  text-align: center;
+  font-family: sans-serif; 
   }
-  input[type=text], select, textarea {
+
+.contact span {
+  color: blueviolet;
+  text-align: center;
+  font-family: sans-serif;
+
+}
+
+  input[type=text] {
     width: 90%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -70,7 +98,7 @@
     resize: vertical;
   }
 
-  input[type=email], select, textarea {
+  input[type=email] {
     width: 90%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -111,6 +139,7 @@
     background-color: #45a049;
   }
 
+
   .product-container{
 	display: flex;
 	justify-content: center;
@@ -118,6 +147,9 @@
 	flex-wrap: wrap;
 	margin: 10px 0px;
 	width:100%;
+  color: blueviolet;
+  text-align: center;
+  font-family: sans-serif;
 }
 
 .p-box{
@@ -130,7 +162,7 @@
 	border-radius: 4px;
 	position: relative;
 	margin: 10px 30px;
-    padding: auto;
+  padding: auto;
 }
 
 p-box img{
@@ -140,19 +172,28 @@ p-box img{
 .productsimg{ 
 height: 350px;
 width: auto;
+border-radius: 10px;
 
 }
 
 footer
 { text-align: center;
-  padding: 3px;
-  background-color: DarkSalmon;
-  color: white; } /*w3school https://www.w3schools.com/tags/tryit.asp?filename=tryhtml5_footer_css */
+  left: 0;
+  bottom: 0;
+  position: relative;
+  color: white;
+  overflow: hidden;
+  margin: 50px;
+  background-color: #f7b0da;
+  border:#c94493, 5px solid;
+  border-radius: 10px;
+
+} /*w3school https://www.w3schools.com/tags/tryit.asp?filename=tryhtml5_footer_css */
 
   .fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 30px;
+    padding: 15px;
+    font-size: 20px;
+    width: 20px;
     text-align: center;
     text-decoration: none;
     margin: 5px 2px;
@@ -283,4 +324,5 @@ footer
 
 .faqtext a{
   text-decoration: none;
+  color: blueviolet;
 }
